<resources>
    <string name="app_name">Controlador 2048</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Quantized</item>
        <item>Float</item>
    </string-array>

    <string name="device">Device:</string>
    <string name="BotaoBack">BACK</string>
    <string name="btn_1">Retorno</string>
    <string name="btn_2">UP</string>
    <string name="btn_3">LEFT</string>
    <string name="btn_4">RIGHT</string>
    <string name="btn_5">DOWN</string>
    <string name="UserIP">Digite seu IP</string>
    <string name="btn_IPConfirm">CONFIRMAR IP</string>
    <string name="feedback">texto de feedback</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
</resources>
